<resources>
    <string name="service_not_available">Service Not Available</string>
    <string name="invalid_lat_long_used">Invalid Latitude and Longitude</string>
    <string name="no_address_found">No Address Found</string>
    <string name="address_found">Address Found</string>
    <string name="no_geocoder_available">No Geocoder Available</string>
    <string name="app_name">BuildEm</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="select_category">Select Category</string>
    <string name="projects">Select Project</string>
    <string name="Item">Select Item</string>
    <string name="type">Select Type</string>
    <string name="material">Select Material</string>
    <string name="purpose">Select Purpose</string>
    <string name="payment_type">Select Payment Type</string>
    <string name="payment_mode">Select Payment Mode</string>
    <string name="unit">Select Unit</string>
    <string name="Contractor">Select Contractor</string>
    <string-array name="payment_type"><item>Select Payment Type</item><item>Credit</item><item>Debit</item></string-array>
    <string-array name="payment_mode"><item>Select Payment Mode</item><item>Cash</item><item>Draft</item><item>Cheque</item></string-array>
    <string-array name="units">
        <item>Unit</item>
        <item>mtr</item>
        <item>sqm</item>
        <item>cum</item>
        <item>feet</item>
        <item>sqft</item>
        <item>cuft</item>
        <item>inches</item>
        <item>bag</item>
        <item>pack</item>
        <item>bucket</item>
        <item>ltr</item>
        <item>kg</item>
        <item>box</item>
    </string-array>
    <string-array name="purpose">
        <item>Vendor</item>
        <item>Purchase Order</item>
        <item>Work</item>
        <item>Labour</item>
        <item>Misc</item>
    </string-array>
    <string-array name="approval">
        <item>Select</item>
        <item>With Signature</item>
        <item>Without Signature</item>
    </string-array>
    <string-array name="status">
        <item>Select Status</item>
        <item>Completed</item>
        <item>Removed</item>
        <item>Ongoing</item>
        <item>Upcoming</item>
    </string-array>

    <string-array name="category_filter">
        <item>Select Category</item>
        <item>Civil</item>
        <item>Structure</item>
    </string-array>
    <string-array name="labour_type">
        <item>Select Labour Type</item>
        <item>Skilled</item>
        <item>Unskilled</item>
    </string-array>
    <string-array name="duration_type">
        <item>Select Duration Type</item>
        <item>Hours</item>
        <item>Days</item>
        <item>Week</item>
        <item>Month</item>
        <item>Year</item>
    </string-array>
    <string-array name="activity_status">
        <item>Select Status</item>
        <item>Pending</item>
        <item>Completed</item>
    </string-array>

  <string-array name="complaint_status">
        <item>Select Status</item>
        <item>Pending</item>
        <item>Completed</item>
        <item>Suspended</item>
    </string-array>

    <string-array name="tax">
        <item>Select Tax</item>
        <item>W/O Tax</item>
        <item>With Tax</item>
        <item>Tax Extra 18%</item>
    </string-array>

  <string-array name="job_status">
        <item>Begin Job</item>
        <item>Job Completed</item>
        <item>Job Cancelled</item>
        <item>Job Delayed</item>
    </string-array>

    <string-array name="acitivity_units">
        <item>Select Unit</item>
        <item>nos</item>
        <item>ft</item>
        <item>m</item>
        <item>sqm</item>
        <item>sqft</item>
        <item>cum</item>
        <item>cuft</item>
    </string-array>
    <string name="about_us">"BuildnLive is an initiative to simplify people's life by providing an array of personalised services at their fingertips and then at their doorstep.This application is for Architects, Builders and Contractors"</string>
    <string name="select_status">Status</string>
    <string name="profession">Profession</string>
    <string name="select_vendor">Vendor</string>
    <string name="return_item"><u>Return</u></string>
    <string name="no_content">No Content</string>
    <string name="no_services">No Services</string>
    <string name="buildo_site_app">Buildo Site App</string>
    <string name="customer_details">Customer Details</string>
    <string name="attach_images">Attach Images</string>
    <string name="comment_here">Comment here</string>
    <string name="close">Close</string>
    <string name="submit">Submit</string>
    <string name="discount">Discount</string>
    <string name="installations">Installations</string>
    <string name="complaints">Complaints</string>
    <string name="amc">AMC</string>
    <string name="services">Services</string>
    <string name="see_more">See More</string>
    <string name="complaint_details">Complaint Details</string>
    <string name="work_done">Work Done</string>
    <string name="status">Status: </string>
    <string name="nameHolder">Name: %1$s</string>
    <string name="addressHolder">Address: %1$s</string>
    <string name="mobileholder">Mobile No: %1$s</string>
    <string name="commentholder">Comment: %1$s</string>
    <string name="statusHolder">Status: %1$s</string>
    <string name="machines_equipments">Machines/Equipments</string>
    <string name="no_machine_equipments">No Machine/Equipments</string>
    <string name="quantityHolder">Quantity: %1$s</string>
    <string name="amount_received">Amount Received:</string>
    <string name="comments">Comments</string>
    <string name="save">Save</string>
    <string name="reviewAndSave">Review and Save</string>
    <string name="next">Next</string>
    <string name="on_job">On Job</string>
    <string name="start_job">Start Job</string>
    <string name="machine_installations">Machine Installations</string>
    <string name="choose_work_done">Choose Work Done</string>
    <string name="agreement">I acknowledge the work done.</string>
    <string name="clear_pad">Clear</string>
    <string name="save_signature">Save</string>
    <string name="compress_signature">Scale</string>
    <string name="proceed_with_signature">Proceed With Signature</string>
    <string name="proceed_without_signature">Proceed Without Signature</string>
    <string name="select_an_action">Select an action</string>
    <string name="approval">Approval</string>
    <string name="reason">Reason</string>
    <string name="rate">Rate</string>
    <string name="quantity">Quantity</string>
    <string name="biometric_title">Authenticate Attendance</string>
    <string name="biometric_subtitle">Approve the update of attendance status</string>
    <string name="biometric_description">Place your finger on the scanner to verify your identity.</string>
    <string name="biometric_negative_button_text">Cancel</string>

    <string name="biometric_error_sdk_not_supported">Sdk version not supported</string>
    <string name="biometric_error_hardware_not_supported">Device does not support biometric authentication</string>
    <string name="biometric_error_fingerprint_not_available">Fingerprint is not registered in device</string>
    <string name="biometric_error_permission_not_granted">Permission is not granted by user</string>
    <string name="biometric_failure">Login not successful!</string>
    <string name="biometric_cancelled">Authentication cancelled by user</string>
    <string name="biometric_success">Login Successful</string>
    <string name="site_payment">Site Payment</string>
    <string name="attendance">Attendance</string>

    <string name="checkout">Checkout</string>
    <string name="checkin">Checkin</string>
    <string name="absent">Absent</string>
    <string name="outduty">Out Duty</string>
    <string name="upto">Up to(In Hrs):</string>
    <string name="select_date">Select Date</string>
    <string name="done">Done</string>
    <string name="unknown_error">Unknown Error has occurred, Please Contact Support.</string>
    <string name="http_error">%1$s %2$s</string>
    <string name="error">Request Failed, Please Contact Support.</string>

    <string name="internal_server_error">Internal Server Error</string>
    <string name="server_error">Don\'t worry its not your fault. Server may be experiencing some issues, Please contact admin.</string>


    <string-array name="absent">
    <item>Select Status</item>
    <item>Absent</item>
    <item>Leave</item>
    <item>Outduty</item>
    </string-array>

    <string name="hours">Hours</string>
    <string name="servicing">Servicing</string>
    <string name="take_leave">Take Leave</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="reason_for_leave">Reason for leave.</string>
    <string name="request_leave">Request Leave</string>
    <string name="leave_dates">Leave Dates</string>
    <string name="previous_leave_requests">Previous Leave Requests</string>
    <string name="cancel_leave">Cancel Leave</string>


    <string-array name="work_hours">
        <item>Select Work Hours</item>
        <item>8 Hrs</item>
        <item>12 Hrs</item>
    </string-array>
</resources>
