<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_review"
    android:background="@color/white">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/items"
        android:layout_width="match_parent"
        android:layout_height="180dp" />

    <LinearLayout
        android:layout_below="@+id/items"
        android:layout_marginTop="10dp"
        android:id="@+id/container"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/amount_received"
            android:layout_margin="5dp"
            android:layout_weight="0.4"
            android:layout_width="0dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:padding="10dp"
            />

        <EditText
            android:id="@+id/amountReceived"
            android:layout_margin="5dp"
            android:layout_weight="0.6"
            android:layout_width="0dp"
            android:inputType="numberDecimal"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:padding="10dp"
            tools:ignore="Autofill,LabelFor,TextFields" />

    </LinearLayout>



    <Spinner
        android:layout_below="@+id/container"
        android:id="@+id/status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:spinnerMode="dialog"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:entries="@array/complaint_status"
        android:background="@drawable/border"
        android:prompt="@string/type"/>

    <EditText
        android:layout_below="@+id/status"
        android:id="@+id/comments"
        android:layout_margin="10dp"
        android:lines="8"
        android:gravity="start"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:inputType="textMultiLine"
        android:hint="@string/comments"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:padding="10dp"
        />

    <Button
        android:layout_alignParentBottom="true"
        android:id="@+id/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/colorAccent"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="20sp"/>



</RelativeLayout>