<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="5dp"
    android:background="#00ffffff"
    android:elevation="7dp"
    card_view:cardCornerRadius="3dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/alert_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="5dp"
            android:text="@string/installations"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="25sp" />
        <View
            android:id="@+id/separator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/alert_title"
            android:background="#e8e8e8"/>

        <LinearLayout
            android:id="@+id/input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/separator"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/attache_images"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/attach_images"
                android:textAlignment="center"
                android:textSize="15sp"
                android:textStyle="bold" />

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:background="@color/color1" />

            <buildnlive.com.buildem.utils.AdvancedRecyclerView
                android:id="@+id/images"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:scrollbars="horizontal" />

            <EditText
                android:id="@+id/message"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:background="@drawable/border"
                android:gravity="start"
                android:hint="@string/comment_here"
                android:maxHeight="200dp"
                android:padding="5dp"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <Button
                android:id="@+id/negative"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:text="@string/close"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <Button
                android:id="@+id/positive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="#5089e3"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>

    </RelativeLayout>

    <TextView
        android:id="@+id/disableView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#88ffffff"
        android:visibility="gone" />

    <ProgressBar
        android:id="@+id/progress"
        style="?android:attr/progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/action"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:indeterminateTint="@color/colorAccent"
        android:visibility="gone" />
</androidx.cardview.widget.CardView>