<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_add_amc"
    android:background="@color/white">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:breakStrategy="high_quality"
        android:gravity="center"
        android:padding="5dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:text="@string/choose_work_done" />
    <View
        android:layout_below="@+id/title"
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_grey"/>


    <androidx.recyclerview.widget.RecyclerView
        android:layout_below="@+id/separator"
        android:id="@+id/items"
        android:layout_above="@+id/next"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:indeterminate="true"
        android:visibility="gone" />

    <TextView
        android:id="@+id/hider"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.6"
        android:background="#ffffff"
        android:visibility="gone" />
    <TextView
        android:visibility="gone"
        android:layout_above="@+id/next"
        android:id="@+id/no_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:text="@string/no_services"
        />

    <Button
        android:id="@+id/next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:background="@drawable/inactive_button"
        android:layout_alignParentBottom="true" />

</RelativeLayout>