<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="#00ffffff"
    android:elevation="7dp"
    card_view:cardCornerRadius="3dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/alert_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="5dp"
            android:text="@string/select_an_action"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="25sp" />

        <View
            android:id="@+id/separator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/alert_title"
            android:background="#e8e8e8" />

        <Spinner
            android:layout_below="@id/separator"
            android:padding="10dp"
            android:background="@drawable/border"
            android:id="@+id/approval"
            android:entries="@array/approval"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:spinnerMode="dialog"
            android:prompt="@string/approval" />

        <EditText
            android:visibility="gone"
            android:layout_below="@id/approval"
            android:id="@+id/reason"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:padding="10dp"
            android:lines="4"
            android:scrollbars="vertical"
            android:background="@drawable/border"
            android:hint="@string/reason"
            android:textAlignment="textStart"
            android:textSize="16sp"
            android:gravity="start" />

        <LinearLayout
            android:layout_below="@+id/reason"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/negative"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center"
                android:background="@color/transparent"
                android:text="@string/close"
                android:textColor="@color/black"
                android:textSize="16sp"
                />

            <Button
                android:id="@+id/positive"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center"
                android:background="@drawable/home_button_rectangle"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textSize="16sp"
                />
        </LinearLayout>
        <!--   <TextView
               android:layout_below="@id/separator"
               android:id="@+id/withoutSign"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_margin="5dp"
               android:padding="15dp"
               android:clickable="true"
               android:text="@string/proceed_without_signature"
               android:textAlignment="center"
               android:textColor="@color/color2"
               android:textSize="16sp"
               android:focusable="true" />

           <TextView
               android:layout_below="@+id/withoutSign"
               android:id="@+id/withSign"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_margin="5dp"
               android:clickable="true"
               android:padding="15dp"
               android:text="@string/proceed_with_signature"
               android:textAlignment="center"
               android:textColor="@color/color2"
               android:textSize="16sp"
               android:focusable="true" />


           <Button
               android:layout_below="@+id/withSign"
               android:id="@+id/negative"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_margin="5dp"
               android:gravity="center"
               android:layout_centerHorizontal="true"
               android:background="@color/transparent"
               android:text="@string/close"
               android:textColor="@color/black"
               android:textSize="16sp" />-->


    </RelativeLayout>

</androidx.cardview.widget.CardView>