<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:showIn="@layout/activity_amc_details"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:background="@color/white">
    <LinearLayout
        android:id="@+id/customerDetailsContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/customer_details"
            android:layout_width="0dp"
            android:layout_weight="0.8"
            android:layout_height="wrap_content"
            android:breakStrategy="high_quality"
            android:padding="10dp"
            android:gravity="start"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/customer_details" />

        <TextView
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:id="@+id/onJob"
            android:clickable="true"
            android:focusable="true"
            android:layout_weight="0.2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/on_job"
            android:textColor="@color/white"
            android:background="@drawable/inactive_button" />


    </LinearLayout>


    <LinearLayout
        android:layout_below="@id/customerDetailsContainer"
        android:id="@+id/customer_details_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="5dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/name"
                android:layout_weight="0.7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:breakStrategy="high_quality"
                android:padding="5dp"
                android:textColor="@color/color3"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:text="Varun Singh" />

            <LinearLayout
                android:gravity="end"
                android:layout_gravity="center"
                android:layout_weight="0.3"
                android:orientation="horizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:text="@string/status"
                    android:layout_marginRight="5dp" />

                <ImageView
                    android:id="@+id/statusIndicator"
                    android:layout_width="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_gravity="center"
                    android:layout_height="10dp"
                    android:layout_marginRight="10dp" />

            </LinearLayout>
        </LinearLayout>


        <TextView
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:breakStrategy="high_quality"
            android:ellipsize="end"
            android:maxLines="2"
            android:padding="5dp"
            android:textColor="@color/black"
            android:textSize="12sp"
            tools:text="E-2/22 Arjun Mall Road, DLF Phase 1" />


        <TextView
            android:id="@+id/mobileNo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:breakStrategy="high_quality"
            android:gravity="start"
            android:padding="5dp"
            android:textColor="@color/black"
            android:textSize="12sp"
            tools:text="Mobile No: 7838342613" />

        <TextView
            android:id="@+id/comment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:breakStrategy="high_quality"
            android:gravity="start"
            android:padding="5dp"
            android:background="@drawable/border"
            android:lines="5"
            android:scrollbars="vertical"
            android:textColor="@color/black"
            android:textSize="12sp"
            tools:text="Comment: Testing" />


        <TextView
            android:id="@+id/seeMore"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:breakStrategy="high_quality"
            android:gravity="end"
            android:padding="5dp"
            android:textColor="@color/c2"
            android:textSize="12sp"
            android:textStyle="bold"
            android:text="@string/see_more" />


    </LinearLayout>

    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/customer_details_container"
        android:background="@color/light_grey" />


    <TextView
        android:id="@+id/work_details"
        android:layout_below="@id/separator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:breakStrategy="high_quality"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/work_done" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/items"
        android:layout_below="@id/work_details"
        android:layout_height="match_parent"
        android:layout_width="match_parent" />

    <TextView
        android:visibility="gone"
        android:id="@+id/no_content"
        android:layout_below="@id/work_details"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:text="@string/no_services" />



</RelativeLayout>